[project]
name = "PyConfigEvents"
version = "0.1.0"
description = "PyConfigEvents 是一个基于 Pydantic 的配置管理库，提供了事件驱动的配置变更通知机制。它允许您创建类型安全的配置模型，并在配置值变化时自动触发回调函数。"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "pytomlpp>=1.0.13",
    "pyyaml>=6.0.2",
]
